@startuml Wiqaytna_Pro_Simple_Colored
' --- STYLE ET CONFIGURATION ---
skinparam backgroundColor white
skinparam handwritten false
skinparam shadow true
skinparam roundCorner 10

' Masquer les détails pour simplifier
hide methods
hide attributes
hide circle

' Palette de couleurs
skinparam package {
    BackgroundColor #F9F9F9
    BorderColor #666666
    FontColor #333333
}

skinparam class {
    HeaderBackgroundColor #2C3E50
    BackgroundColor white
    BorderColor #2C3E50
    ArrowColor #2C3E50
    FontColor #333333
    FontSize 13
}

title Wiqaytna Pro - Architecture Globale

' --- 1. DOMAIN ENTITIES (Le Cœur) ---
package "1. Entités (Données)" {
    class User #E3F2FD
    class Doctor #E3F2FD
    class Patient #E3F2FD
    class Appointment #E3F2FD
    class TimeSlot #E3F2FD
    
    enum UserRole #E1BEE7
    enum AppointmentStatus #E1BEE7
}

' --- 2. SERVICES (La Logique) ---
package "2. Services (Logique Métier)" {
    class UserService #F0F4C3
    class DoctorService #F0F4C3
    class PatientService #F0F4C3
    class AppointmentService #F0F4C3
    class TimeSlotService #F0F4C3
}

' --- 3. REPOSITORIES (La Base de données) ---
package "3. Repositories (Persistance)" {
    interface UserRepository #FFF9C4
    interface DoctorRepository #FFF9C4
    interface PatientRepository #FFF9C4
    interface AppointmentRepository #FFF9C4
    interface TimeSlotRepository #FFF9C4
}

' --- RELATIONS ENTRE ENTITÉS ---
User "1" *-- "0..1" Doctor : Profile
User "1" *-- "0..1" Patient : Profile
User -up- UserRole

Doctor "1" -- "*" TimeSlot
Doctor "1" -- "*" Appointment

Patient "1" -- "*" Appointment
Appointment -up- AppointmentStatus

' --- RELATIONS ARCHITECTURE (Service -> Repository -> Entity) ---

' UserService gère User via UserRepository
UserService ..> User
UserService ..> UserRepository
UserRepository ..> User

' DoctorService gère Doctor via DoctorRepository
DoctorService ..> Doctor
DoctorService ..> DoctorRepository
DoctorRepository ..> Doctor

' PatientService gère Patient via PatientRepository
PatientService ..> Patient
PatientService ..> PatientRepository
PatientRepository ..> Patient

' AppointmentService gère Appointment via AppointmentRepository
AppointmentService ..> Appointment
AppointmentService ..> AppointmentRepository
AppointmentRepository ..> Appointment

' TimeSlotService gère TimeSlot via TimeSlotRepository
TimeSlotService ..> TimeSlot
TimeSlotService ..> TimeSlotRepository
TimeSlotRepository ..> TimeSlot

@enduml